; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_kpi_ipfilter.c_ipf_inject_output.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_kpi_ipfilter.c_ipf_inject_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }

@ENOTSUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipf_inject_output(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.mbuf*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i64, i64* %4, align 8
  %11 = inttoptr i64 %10 to %struct.mbuf*
  store %struct.mbuf* %11, %struct.mbuf** %7, align 8
  store i32 0, i32* %9, align 4
  %12 = load %struct.mbuf*, %struct.mbuf** %7, align 8
  %13 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp slt i32 %14, 1
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = load %struct.mbuf*, %struct.mbuf** %7, align 8
  %18 = call %struct.mbuf* @m_pullup(%struct.mbuf* %17, i32 1)
  store %struct.mbuf* %18, %struct.mbuf** %7, align 8
  %19 = load %struct.mbuf*, %struct.mbuf** %7, align 8
  %20 = icmp eq %struct.mbuf* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %16
  br label %40

22:                                               ; preds = %16
  br label %23

23:                                               ; preds = %22, %3
  %24 = load %struct.mbuf*, %struct.mbuf** %7, align 8
  %25 = call i64 @m_mtod(%struct.mbuf* %24)
  %26 = inttoptr i64 %25 to i32*
  %27 = load i32, i32* %26, align 4
  %28 = ashr i32 %27, 4
  store i32 %28, i32* %8, align 4
  %29 = load i32, i32* %8, align 4
  switch i32 %29, label %35 [
    i32 4, label %30
  ]

30:                                               ; preds = %23
  %31 = load i64, i64* %4, align 8
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @ipf_injectv4_out(i64 %31, i32 %32, i32 %33)
  store i32 %34, i32* %9, align 4
  br label %39

35:                                               ; preds = %23
  %36 = load %struct.mbuf*, %struct.mbuf** %7, align 8
  %37 = call i32 @m_freem(%struct.mbuf* %36)
  %38 = load i32, i32* @ENOTSUP, align 4
  store i32 %38, i32* %9, align 4
  br label %39

39:                                               ; preds = %35, %30
  br label %40

40:                                               ; preds = %39, %21
  %41 = load i32, i32* %9, align 4
  ret i32 %41
}

declare dso_local %struct.mbuf* @m_pullup(%struct.mbuf*, i32) #1

declare dso_local i64 @m_mtod(%struct.mbuf*) #1

declare dso_local i32 @ipf_injectv4_out(i64, i32, i32) #1

declare dso_local i32 @m_freem(%struct.mbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
